# LicenseDetection

./: .gitignore  LicenseDetection.sln  README.md
LicenseDetection/: CMakeLists.txt  LicenseDetection.cpp  LicenseDetection.h  LicenseDetection.vcxproj  LicenseDetection.vcxproj.filters  centroidtracker.cpp  centroidtracker.h  common_functions.cpp  common_functions.h  detection_result.h  license_detection.cpp  license_plate_detection.cpp  license_plate_detection.h  objectbbox.cpp  objectbbox.h  test.cpp  yolo11.cpp  yolo11.h
LicenseDetection.API/: PrepHttpClient.cs
LicenseDetection.API/Results/: APIResponse.cs
LicenseDetection.API/Services/: ILicensePlateRecognition.cs  LicensePlateRecognition.cs
LicenseDetectionUI/: App.xaml  App.xaml.cs  LicenseDetectionUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
LicenseDetectionUI/Commands/: AsyncCommandBase.cs  FrameProcessCommand.cs  UpdateCurrentViewModelCommand.cs
LicenseDetectionUI/Controls/: NavigationBar.xaml  NavigationBar.xaml.cs
LicenseDetectionUI/Converters/: EqualValuetoParameterConverter.cs
LicenseDetectionUI/HostBuilders/: AddAPIHostBuilderExtensions.cs  AddServicesHostBuilderExtensions.cs  AddStoresHostBuilderExtensions.cs  AddViewModelsHostBuilderExtensions.cs  AddViewsHostBuilderExtensions.cs
LicenseDetectionUI/Interop/: NativeMethods.cs
LicenseDetectionUI/Models/: DetectionResult.cs  LicensePlateItem.cs
LicenseDetectionUI/Properties/: launchSettings.json
LicenseDetectionUI/Services/: IVideoService.cs  VideoService.cs
LicenseDetectionUI/State/Navigators/: INavigator.cs  IRenavigator.cs  Navigator.cs  ViewModelDelegateRenavigator.cs
LicenseDetectionUI/Styles/: Common.xaml  NavigationBar.xaml
LicenseDetectionUI/ViewModels/: LoggingViewModel.cs  MainViewModel.cs  VideoViewModel.cs  ViewModelBase.cs
LicenseDetectionUI/ViewModels/Factories/: IViewModelFactory.cs  ViewModelFactory.cs
LicenseDetectionUI/Views/: Logging.xaml  Logging.xaml.cs  VideoView.xaml  VideoView.xaml.cs
LicensePlateOCR/: CMakeLists.txt  LicensePlateOCR.vcxproj  LicensePlateOCR.vcxproj.filters  crnn_ocr.h  license_plate_ocr.cpp  license_plate_ocr.h  paddle_ocr.h
